fix scrollbar

--- a/src/main.css
+++ b/src/main.css
@@ -11,7 +11,6 @@ body {
 html, body, #root {
   height: 100%;
   font-family: "Work Sans", sans-serif;
-  overflow-x: hidden;
 }
 
 a {
